feat(strategy design pattern): add strategy design pattern

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,4 +20,5 @@ add_executable(${PROJECT_NAME} src/main.c)
 enable_testing()
 # Add the tests folder
 add_subdirectory(tests)
+add_subdirectory(examples/StrategyDesignPattern)
 add_subdirectory(examples/FactoryDesignPattern)
