feat(state pattern): add state design pattern
add state machine design pattern

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,5 +20,6 @@ add_executable(${PROJECT_NAME} src/main.c)
 enable_testing()
 # Add the tests folder
 add_subdirectory(tests)
+add_subdirectory(examples/StateDesignPattern)
 add_subdirectory(examples/StrategyDesignPattern)
 add_subdirectory(examples/FactoryDesignPattern)
