add example pin hardware

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,4 @@ add_subdirectory(tests)
 add_subdirectory(examples/StateDesignPattern)
 add_subdirectory(examples/StrategyDesignPattern)
 add_subdirectory(examples/FactoryDesignPattern)
+add_subdirectory(examples/ExamplePinHardware)
